# chatBot

./: CMakeLists.txt
include/: commanditem.hpp  commandmodel.hpp  commands.hpp  helpcommandsmodel.hpp  helpcommandswidget.hpp  historyWidget.hpp  logindialog.hpp  mainwindow.hpp  namevalidator.hpp  syntaxhighlighter.hpp
include/clearWidget/: clear.cpp  clear.hpp  clearWidget.cpp  clearWidget.hpp
include/mathWidgets/: add.cpp  add.hpp  div.cpp  div.hpp  mult.cpp  mult.hpp  sub.cpp  sub.hpp
include/newHistoryWidget/: historyModel.cpp  historyModel.hpp  historyObject.cpp  historyObject.hpp  historyWidget.cpp  historyWidget.hpp
include/weather/: cityValidator.cpp  cityValidator.hpp  weatherobject.cpp  weatherobject.hpp  weathertablemodel.cpp  weathertablemodel.hpp  weatherwidget.cpp  weatherwidget.hpp
resources/: cities.txt  pictures.qrc
src/: commandcompleter.cpp  commanditem.cpp  commandmodel.cpp  helpcommandsmodel.cpp  helpcommandswidget.cpp  historyWidget.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  namevalidator.cpp  syntaxhighlighter.cpp
